# xray

./: CHANGELOG.md  Cargo.toml  README.md  xray.toml
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
queries/: dask.scm  io.scm  numpy.scm  xarray.scm
src/: cli.rs  config.rs  diagnostic.rs  diff.rs  explain.rs  ignore.rs  init.rs  lib.rs  lsp.rs  main.rs  notebook.rs  parser.rs  runner.rs  watch.rs
src/rules/: dask.rs  io.rs  mod.rs  numpy.rs  xarray.rs
tests/: integration_tests.rs
tests/fixtures/: clean.py  dask_bad.py  io_bad.py  numpy_bad.py  suppress_bad.py  suppress_file_bad.py  xarray_bad.py
